Fix project image height on mobile

--- a/src/components/Portfolio/Modal/modal.scss
+++ b/src/components/Portfolio/Modal/modal.scss
@@ -118,6 +118,7 @@
 .project-image {
     display: block;
     width: 100%;
+    height: 100%;
     margin: 0 auto;
 }
 
